--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="text_status_test_in_progress">Test in progress ..</string>
     <string name="text_status_test_failed_see_log">Test failed. See the trace below.</string>
     <string name="text_title_share_results">Share test results</string>
+    <string translatable="false" name="text_x_linebreak_y">%1$s\n%2$s</string>
 </resources>
